# lottieviewer

./: .gitmodules  CMakeLists.txt  README.md
src/: lottieviewer.cpp  lottieviewer.h  main.cpp
